manifests/apps/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-https
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - jellyfin.example.com
  rules:
    - backendRefs:
      - group: ''
        kind: Service
        name: jellyfin
        port: 8096
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
